--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "textproj",
-    "short_name": "textproj",
+    "name": "proj0510",
+    "short_name": "proj0510",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
